feat: batch test-case execution + fix gitignore + add deploy configs (secrets removed)